--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,7 +25,8 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="SPOTIFY STREAMER"
+        android:text="Spotify Streamer"
+        android:textAllCaps="true"
         android:background="#FFA000"
         android:id="@+id/spotifyApp"
         android:layout_centerHorizontal="true"
@@ -35,7 +37,8 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="SCORES APP"
+        android:text="Scores App"
+        android:textAllCaps="true"
         android:background="#FFA000"
         android:id="@+id/scoresApp"
         android:layout_centerHorizontal="true"
@@ -47,7 +50,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="#FFA000"
-        android:text="LIBRARY APP"
+        android:text="Library App"
+        android:textAllCaps="true"
         android:id="@+id/libraryApp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/scoresApp"
@@ -57,7 +61,8 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="BUILD IT BIGGER"
+        android:text="Build it bigger"
+        android:textAllCaps="true"
         android:background="#FFA000"
         android:id="@+id/builditApp"
         android:layout_centerHorizontal="true"
@@ -68,7 +73,8 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="XYZ READER"
+        android:text="xyz reader"
+        android:textAllCaps="true"
         android:background="#FFA000"
         android:id="@+id/xyzApp"
         android:layout_centerHorizontal="true"
@@ -79,7 +85,8 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="CAPSTONE: MY OWN APP"
+        android:text="Capstone: My own app"
+        android:textAllCaps="true"
         android:background="#673AB7"
         android:textColor="#ffffff"
         android:id="@+id/capstoneApp"
