--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,7 +26,7 @@
         android:text="My NanoDegree Apps!"
         android:id="@+id/appHeading"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="50dp"
         android:textSize="20sp"/>
 
     <Button
@@ -32,6 +39,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/appHeading"
         android:layout_marginTop="40dp"
+        android:onClick="spotifyClick"
         />
 
     <Button
@@ -44,6 +52,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/spotifyApp"
         android:layout_marginTop="10dp"
+        android:onClick="scoresClick"
         />
 
     <Button
@@ -56,6 +65,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/scoresApp"
         android:layout_marginTop="10dp"
+        android:onClick="libraryClick"
         />
 
     <Button
@@ -68,6 +78,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/libraryApp"
         android:layout_marginTop="10dp"
+        android:onClick="buildClick"
         />
 
     <Button
@@ -80,6 +91,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/builditApp"
         android:layout_marginTop="10dp"
+        android:onClick="xyzClick"
         />
 
     <Button
@@ -91,8 +103,10 @@
         android:textColor="#ffffff"
         android:id="@+id/capstoneApp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/builditApp"
+        android:layout_below="@+id/xyzApp"
         android:layout_marginTop="10dp"
+        android:onClick="capstoneClick"
         />
 
 </RelativeLayout>
+</ScrollView>
