--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,65 +30,45 @@
         android:textSize="20sp"/>
 
     <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        style="@style/buttonStyle"
         android:text="@string/spotify"
-        android:textAllCaps="true"
-        android:background="#FFA000"
         android:id="@+id/spotifyApp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/appHeading"
         android:layout_marginTop="40dp"
         android:onClick="spotifyClick"
         />
 
     <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        style="@style/buttonStyle"
         android:text="@string/scoresApp"
-        android:textAllCaps="true"
-        android:background="#FFA000"
         android:id="@+id/scoresApp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/spotifyApp"
         android:layout_marginTop="10dp"
         android:onClick="scoresClick"
         />
 
     <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:background="#FFA000"
+        style="@style/buttonStyle"
         android:text="@string/libraryApp"
-        android:textAllCaps="true"
         android:id="@+id/libraryApp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/scoresApp"
         android:layout_marginTop="10dp"
         android:onClick="libraryClick"
         />
 
     <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        style="@style/buttonStyle"
         android:text="@string/buildApp"
-        android:textAllCaps="true"
-        android:background="#FFA000"
         android:id="@+id/builditApp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/libraryApp"
         android:layout_marginTop="10dp"
         android:onClick="buildClick"
         />
 
     <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        style="@style/buttonStyle"
         android:text="@string/xyzApp"
-        android:textAllCaps="true"
-        android:background="#FFA000"
         android:id="@+id/xyzApp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/builditApp"
         android:layout_marginTop="10dp"
         android:onClick="xyzClick"
